--- a/_config.yml
+++ b/_config.yml
@@ -1,55 +1,32 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# サイトの基本設定
+title: info for Sora # サイトのタイトルを"info for Sora"に変更しました
+# email: your-email@example.com # あなたのメールアドレス（オプション）- コメントアウトしました
+description: > # サイトの簡単な説明。検索エンジンに表示されることがあります。
+  Lunatisプロジェクトに関するAI（ソラ）のための情報共有プラットフォームです。
+  プロジェクトの進捗、システム詳細、スクリプト情報などを提供します。
 
-title: ソラさんとの情報共有用サイト 
-# email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-url:     "https://tomo-141.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/info-for-sora" # the subpath of your site, e.g. /blog
-# twitter_username: jekyllrb
-# github_username:  jekyll
+# ベースURLの設定
+# GitHub Pagesでサブディレクトリにデプロイする場合に必要です。
+# 例: GitHub PagesのURLが 'https://username.github.io/my-project/' の場合、
+# baseurl: "/my-project" と設定します。
+# 今回のケースでは、/info-for-sora/first-step/Overview/ のパスに合わせて設定します。
+baseurl: "/info-for-sora" # サイトのサブパス。もしルートにデプロイする場合は "" (空文字) にします。
 
-# Build settings
-theme: minima
+# Jekyllのビルド設定 (通常はこのままでOK)
+markdown: kramdown # Markdownパーサーとしてkramdownを使用
+theme: null # 現在はMinimaテーマを使用しないためnullに設定
 plugins:
-  - jekyll-feed
+  - jekyll-feed # RSSフィードを生成するプラグイン（現在は使用していませんが、残しておきます）
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Jekyllのビルドから除外するファイルやフォルダ
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - Rakefile
+  - README.md
+  - LICENSE.txt
+  - CNAME
+  - .sass-cache/
+  - .jekyll-cache/
+  - node_modules/
+  - vendor/
